--- a/wine_dataset.ipynb
+++ b/wine_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -349,14 +349,13 @@
        "3                          2.00    855.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame(X_train, columns=wine_dataset.feature_names)\n",
-    "\n",
     "df.head(4)"
    ]
   },
@@ -364,14 +363,257 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>malic_acid</th>\n",
+       "      <th>ash</th>\n",
+       "      <th>alcalinity_of_ash</th>\n",
+       "      <th>magnesium</th>\n",
+       "      <th>total_phenols</th>\n",
+       "      <th>flavanoids</th>\n",
+       "      <th>nonflavanoid_phenols</th>\n",
+       "      <th>proanthocyanins</th>\n",
+       "      <th>color_intensity</th>\n",
+       "      <th>hue</th>\n",
+       "      <th>od280/od315_of_diluted_wines</th>\n",
+       "      <th>proline</th>\n",
+       "      <th>class</th>\n",
+       "      <th>PCA1</th>\n",
+       "      <th>PCA2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>1.780000e+02</td>\n",
+       "      <td>1.780000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>13.000618</td>\n",
+       "      <td>2.336348</td>\n",
+       "      <td>2.366517</td>\n",
+       "      <td>19.494944</td>\n",
+       "      <td>99.741573</td>\n",
+       "      <td>2.295112</td>\n",
+       "      <td>2.029270</td>\n",
+       "      <td>0.361854</td>\n",
+       "      <td>1.590899</td>\n",
+       "      <td>5.058090</td>\n",
+       "      <td>0.957449</td>\n",
+       "      <td>2.611685</td>\n",
+       "      <td>746.893258</td>\n",
+       "      <td>0.938202</td>\n",
+       "      <td>-6.131425e-14</td>\n",
+       "      <td>-3.073696e-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.811827</td>\n",
+       "      <td>1.117146</td>\n",
+       "      <td>0.274344</td>\n",
+       "      <td>3.339564</td>\n",
+       "      <td>14.282484</td>\n",
+       "      <td>0.625851</td>\n",
+       "      <td>0.998859</td>\n",
+       "      <td>0.124453</td>\n",
+       "      <td>0.572359</td>\n",
+       "      <td>2.318286</td>\n",
+       "      <td>0.228572</td>\n",
+       "      <td>0.709990</td>\n",
+       "      <td>314.907474</td>\n",
+       "      <td>0.775035</td>\n",
+       "      <td>3.149632e+02</td>\n",
+       "      <td>1.313527e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>0.740000</td>\n",
+       "      <td>1.360000</td>\n",
+       "      <td>10.600000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>0.340000</td>\n",
+       "      <td>0.130000</td>\n",
+       "      <td>0.410000</td>\n",
+       "      <td>1.280000</td>\n",
+       "      <td>0.480000</td>\n",
+       "      <td>1.270000</td>\n",
+       "      <td>278.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-4.690594e+02</td>\n",
+       "      <td>-2.750404e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>12.362500</td>\n",
+       "      <td>1.602500</td>\n",
+       "      <td>2.210000</td>\n",
+       "      <td>17.200000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>1.742500</td>\n",
+       "      <td>1.205000</td>\n",
+       "      <td>0.270000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>3.220000</td>\n",
+       "      <td>0.782500</td>\n",
+       "      <td>1.937500</td>\n",
+       "      <td>500.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-2.461400e+02</td>\n",
+       "      <td>-8.330383e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>13.050000</td>\n",
+       "      <td>1.865000</td>\n",
+       "      <td>2.360000</td>\n",
+       "      <td>19.500000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>2.355000</td>\n",
+       "      <td>2.135000</td>\n",
+       "      <td>0.340000</td>\n",
+       "      <td>1.555000</td>\n",
+       "      <td>4.690000</td>\n",
+       "      <td>0.965000</td>\n",
+       "      <td>2.780000</td>\n",
+       "      <td>673.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-7.352540e+01</td>\n",
+       "      <td>-3.269233e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>13.677500</td>\n",
+       "      <td>3.082500</td>\n",
+       "      <td>2.557500</td>\n",
+       "      <td>21.500000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>2.875000</td>\n",
+       "      <td>0.437500</td>\n",
+       "      <td>1.950000</td>\n",
+       "      <td>6.200000</td>\n",
+       "      <td>1.120000</td>\n",
+       "      <td>3.170000</td>\n",
+       "      <td>985.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.385654e+02</td>\n",
+       "      <td>5.449197e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>14.830000</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.230000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>162.000000</td>\n",
+       "      <td>3.880000</td>\n",
+       "      <td>5.080000</td>\n",
+       "      <td>0.660000</td>\n",
+       "      <td>3.580000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>1.710000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1680.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>9.331184e+02</td>\n",
+       "      <td>5.879376e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          alcohol  malic_acid         ash  alcalinity_of_ash   magnesium  \\\n",
+       "count  178.000000  178.000000  178.000000         178.000000  178.000000   \n",
+       "mean    13.000618    2.336348    2.366517          19.494944   99.741573   \n",
+       "std      0.811827    1.117146    0.274344           3.339564   14.282484   \n",
+       "min     11.030000    0.740000    1.360000          10.600000   70.000000   \n",
+       "25%     12.362500    1.602500    2.210000          17.200000   88.000000   \n",
+       "50%     13.050000    1.865000    2.360000          19.500000   98.000000   \n",
+       "75%     13.677500    3.082500    2.557500          21.500000  107.000000   \n",
+       "max     14.830000    5.800000    3.230000          30.000000  162.000000   \n",
+       "\n",
+       "       total_phenols  flavanoids  nonflavanoid_phenols  proanthocyanins  \\\n",
+       "count     178.000000  178.000000            178.000000       178.000000   \n",
+       "mean        2.295112    2.029270              0.361854         1.590899   \n",
+       "std         0.625851    0.998859              0.124453         0.572359   \n",
+       "min         0.980000    0.340000              0.130000         0.410000   \n",
+       "25%         1.742500    1.205000              0.270000         1.250000   \n",
+       "50%         2.355000    2.135000              0.340000         1.555000   \n",
+       "75%         2.800000    2.875000              0.437500         1.950000   \n",
+       "max         3.880000    5.080000              0.660000         3.580000   \n",
+       "\n",
+       "       color_intensity         hue  od280/od315_of_diluted_wines      proline  \\\n",
+       "count       178.000000  178.000000                    178.000000   178.000000   \n",
+       "mean          5.058090    0.957449                      2.611685   746.893258   \n",
+       "std           2.318286    0.228572                      0.709990   314.907474   \n",
+       "min           1.280000    0.480000                      1.270000   278.000000   \n",
+       "25%           3.220000    0.782500                      1.937500   500.500000   \n",
+       "50%           4.690000    0.965000                      2.780000   673.500000   \n",
+       "75%           6.200000    1.120000                      3.170000   985.000000   \n",
+       "max          13.000000    1.710000                      4.000000  1680.000000   \n",
+       "\n",
+       "            class          PCA1          PCA2  \n",
+       "count  178.000000  1.780000e+02  1.780000e+02  \n",
+       "mean     0.938202 -6.131425e-14 -3.073696e-15  \n",
+       "std      0.775035  3.149632e+02  1.313527e+01  \n",
+       "min      0.000000 -4.690594e+02 -2.750404e+01  \n",
+       "25%      0.000000 -2.461400e+02 -8.330383e+00  \n",
+       "50%      1.000000 -7.352540e+01 -3.269233e+00  \n",
+       "75%      2.000000  2.385654e+02  5.449197e+00  \n",
+       "max      2.000000  9.331184e+02  5.879376e+01  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "wine_dataset_dataframe = wine_dataset_dataframe.dropna()"
+    "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
