--- a/conclusion.ipynb
+++ b/conclusion.ipynb
@@ -20,10 +20,10 @@
     "\n",
     "### Причины низкой точности модели на датасете `load_wine`\n",
     "\n",
-    "Различия в точности модели для разных датасетов обусловлены спецификой задачи и особенностями данных.\n",
+    "Различия в точности модели для разных датасетов из-за особенностей данных и других факторов.\n",
     "\n",
     "1. **Количество классов и сложность задачи**\n",
-    "   - **Wine**: `load_wine` представляет задачу многоклассовой классификации с тремя классами вин. Для алгоритмов многоклассовая классификация сложнее, так как модель должна различать несколько типов объектов.\n",
+    "   - **Wine**: `load_wine` представляет задачу  с тремя классами вин. Для таких алгоритмов  сложнее, так как модель должна различать несколько типов объектов.\n",
     "   - **Digits и Breast Cancer**:\n",
     "     - `load_digits` также многоклассовый датасет (цифры), однако изображения цифр легко классифицируются с помощью методов обработки изображений, что приводит к более высокой точности.\n",
     "     - `load_breast_cancer` – бинарная классификация (наличие или отсутствие рака), что упрощает задачу классификации, так как требуется различать только два состояния. Бинарная классификация обычно достигает более высокой точности.\n",
@@ -40,9 +40,7 @@
     "     - `load_digits` представляет пиксельные данные, что делает задачу подходящей для алгоритмов обработки изображений (например, K-Nearest Neighbors).\n",
     "     - В `load_breast_cancer` признаки структурированы для диагностических целей, облегчая классификацию.\n",
     "\n",
-    "## Метод k-NN и чувствительность к шуму\n",
-    "\n",
-    "Метод *k ближайших соседей (k-NN)* чувствителен к вариациям и перекрытию признаков. В `load_wine` перекрытие признаков затрудняет правильную идентификацию классов. В `load_digits` и `load_breast_cancer`, напротив, структура данных способствует нахождению более четких границ между классами, что повышает точность.\n"
+    "\n"
    ]
   }
  ],
